# gerrit-action

./: .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  Dockerfile  QUICKSTART.md  README.md  REUSE.toml  action.yaml  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: release-drafter.yaml  tag-push.yaml  testing.yaml
docker/: requirements-scripts.txt  requirements.txt
docs/: IMPLEMENTATION_SUMMARY.md
examples/: basic-usage.yaml  gerrit-setup-template.json  gerrit-setup-template.json.license  multi-instances.yaml
scripts/: add-ssh-auth-keys.sh  check-services.py  check-services.sh  check-uv-checksum.sh  cleanup.py  cleanup.sh  collect-outputs.py  collect-outputs.sh  configure-g2p.py  detect-api-paths.py  detect-api-paths.sh  reindex.py  setup-gerrit-user.py  start-instances.py  start-instances.sh  test-fetchevery-local.sh  test-local.sh  test-replication-local.py  trigger-replication.py  trigger-replication.sh  verify-replication.py  verify-replication.sh  verify-tunnel.py
scripts/lib/: __init__.py  api_paths.py  config.py  docker_manager.py  errors.py  g2p_config.py  g2p_github.py  g2p_setup.py  gerrit-common.sh  gerrit_api.py  health_check.py  logging_utils.py  outputs.py  replication.py
tests/: __init__.py  conftest.py  test_api_paths.py  test_config.py  test_docker_manager.py  test_g2p_config.py  test_g2p_github.py  test_g2p_setup.py  test_gerrit_api.py  test_health_check.py  test_outputs.py  test_reindex.py  test_replication.py  test_start_instances.py  test_verify_tunnel.py
